# Langchain

./: .env  pyproject.toml
CH-1/: 1_Basics.ipynb
CH-2/: 2_Messages.ipynb
CH-4/: 1_ReAct_Agent_Intro.ipynb
Ch-3/: 3_Structured_output.ipynb
