[project]
name = "langchain-learning"
version = "3.14"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=1.0.1",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
